--- a/CSS/style.css
+++ b/CSS/style.css
@@ -292,7 +292,7 @@ footer .fa-facebook-square:hover {
 footer .fa-google-plus-square:hover {
   color: #cd201f;
 }
-footer .fa-github:hover {
+footer .fa-github-square:hover {
   color: #c60043;
 }
 footer .fa-heart {
