--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,11 @@ hr {
   height: 6px;
   border: 0;
   margin: 20px auto;
-
+}
+@media (max-width:768px) {
+  hr{
+    width: calc(100% - 50px);
+  }
 }
 /*Small */
 @media (min-width: 768px) {
